--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 .Python
 env/
 venv/
+venv-*/
+venv-etsynova/
 ENV/
 .venv
 pip-log.txt
@@ -33,6 +35,8 @@ next-env.d.ts
 
 # Environment
 .env
+.env.*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
@@ -61,3 +65,35 @@ logs/
 *.pid
 *.seed
 *.pid.lock
+
+# API Keys & Secrets
+*.pem
+*.key
+*.crt
+secrets/
+.secrets
+
+# FastAPI specific
+instance/
+.webassets-cache
+
+# Alembic
+alembic/versions/*.py
+!alembic/versions/
+
+# Redis dump
+dump.rdb
+
+# Testing
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.hypothesis/
+
+# OS specific
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
